<resources>
    <string name="app_name">ひらがなとカタカナ</string>
    <string name="app_center">日本語のアップ</string>
    <string name="button_nameM">始める</string>
    <string name="sndname">Test Your Japanese</string>
    <string name="thirty">30 seconds</string>
    <string name="minute">1 Minute</string>
    <string name="katatext">カタカナ</string>
    <string name="hiraText">ひらがな</string>
    <string name="hiragana">Hiragana</string>
    <string name="katakana">Katakana</string>

    <string name="score">score</string>
    <string name="oneButton">Button</string>
    <string name="twoButton">Button</string>
    <string name="threeButton">Button</string>
    <string name="fourButton">Button</string>
    <string name="gKana">DT</string>
    <string name="gameTimer">Time left:</string>



    <string name="loginbutt">Log In</string>
    <string name="signinbutt">Sign In</string>
    <string name="passwordbutt">Passwordn</string>
    <string name="emailbutt">Email</string>
    <string name="signintop">Japanese apps</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
